--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
     <nav class="socials">
       <div class="text-center">
         <ul>
-          <li><a class="github--acc" target="_blank" href="https://github.com/{{ site.github_username }}">گیت هاب</a></li>
+          <li><a class="github--acc" target="_blank" href="https://github.com/mahmood">گیت هاب</a></li>
           <li><a class="twitter--acc" target="_blank" href="https://twitter.com/@{{ site.twitter_username }}">توییتر</a></li>
           <li><a class="email--acc" href="mailto:{{ site.email }}">ایمیل</a></li>
           <li><a class="about--acc" href="{{ site.url }}/about">درباره من</a></li>
